# mlx-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
scripts/: benchmark_compare.sh
src/: bench.rs  inference.rs  main.rs  model.rs  server.rs
tests/: integration.rs
