[package]
name = "mlx-engine"
version = "0.1.0"
edition = "2021"
description = "Native Apple Silicon LLM inference engine powered by MLX. Single binary, zero Python dependency."
license = "MIT"
repository = "https://github.com/vecpluto/mlx-engine"
keywords = ["llm", "mlx", "apple-silicon", "inference", "rust"]
categories = ["command-line-utilities", "science"]

[dependencies]
mlx-rs = { git = "https://github.com/oxiglade/mlx-rs.git", rev = "f4aa309c79b6be35255ca7d34157dfc10d9ed4c9" }
mlx-lm = { git = "https://github.com/oxiglade/mlx-rs.git", rev = "f4aa309c79b6be35255ca7d34157dfc10d9ed4c9" }
mlx-lm-utils = { git = "https://github.com/oxiglade/mlx-rs.git", rev = "f4aa309c79b6be35255ca7d34157dfc10d9ed4c9" }
mlx-macros = { git = "https://github.com/oxiglade/mlx-rs.git", rev = "f4aa309c79b6be35255ca7d34157dfc10d9ed4c9" }

clap = { version = "4", features = ["derive"] }
tokenizers = { version = "0.22", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
indicatif = "0.18"
dirs = "6"

# HTTP server dependencies (used by `serve` subcommand)
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
opt-level = 3
strip = true
